# neurop-forge

./: .gitignore  .replit  LICENSE.md  MANIFEST.in  README.md  README_FIXED.md  audit_report_20260111_110621.json  mega_gauntlet_report_20260113_010832.json  mega_gauntlet_report_20260113_010850.json  pyproject.toml  render.yaml  replit.md  requirements-api.txt
.neurop_expanded_library/: 0002097c2ca8f771.json  0003f69b0f351279.json  000552a378d9e602.json  00105e4b2d688e82.json  00121e83aaa8d814.json  0037974c1f7fdc0a.json  004ec3b4e26d3f24.json  0057953c7840fdc3.json  0057d4b46732a4ef.json  0073f22ae9f841fa.json  007421f5ede575a5.json  0078d23759817a97.json  0082741b2eb92111.json  0083d9e99242edba.json  008c0366ee4272e6.json  0092d22962e2befd.json  0093b888f60adbcf.json  009d06bb0095351a.json  00a5b3a131a9e9d6.json  00a8b12acc56f006.json  00ac873888707010.json  00af19e267c2f5c6.json  00af7c2bf5a19cd0.json  00b23688e28332b4.json  00bbf2047c76fb21.json  00c5c7e024c1f406.json  00c932473d0e21b9.json  00d3680ee14fb8fc.json  00d422f8473ce3bd.json  00db7b3d58bf63ce.json  00e396232980edde.json  00e4163d2432610b.json  00f42f89f9bda7ac.json  00f45f35c76b6726.json  00f9f278b05564da.json  01011442f8055915.json  0101f6cee66211e3.json  01133257cfe82d16.json  0115b92506ddad4f.json  011cb8446d093da4.json  (+8954 more)
.neurop_expanded_library_backup/: 0003f69b0f351279.json  000552a378d9e602.json  00a8b12acc56f006.json  00af7c2bf5a19cd0.json  00b23688e28332b4.json  00c5c7e024c1f406.json  00e4163d2432610b.json  01011442f8055915.json  014eb00a1afee1fe.json  0178f6454c55e374.json  0181ca2b6865e8fe.json  0181db2e797c5bac.json  01ab66d8d3653647.json  01b59fe2d67c2e20.json  01b6c2ea5a14b6e5.json  01beb9975da76607.json  01ce2d0602b287e6.json  01df68db33f016c3.json  01e04e5b61075bf9.json  0227ebc391aea84a.json  022a62cca47cf019.json  022b4638e8f5db9a.json  023ce044b6d13e0d.json  0243db97c441953d.json  024401bf9eec997a.json  025ed137ec4f247f.json  0309d6cbdd943273.json  033794937ee370ac.json  0383a967d8507370.json  03982efc8f885981.json  039db8f72f362967.json  03cc219558e4de75.json  03e9a6c6c0691668.json  041f32c6988e039a.json  04a73a1f00831a41.json  04ac371008b11a64.json  04e0c06d9437a62d.json  04e1e11f8102293c.json  05002bbbabae5c30.json  0505163a120260f7.json  (+2258 more)
.neurop_verified/: registry.json  tier_registry.json
api/: main.py
attached_assets/: Pasted--1-59-1-190-NEUROP-FORGE-LICENSE-v2-0-0Copyright-c-2024_1768210118833.txt  Pasted--ABSOLUTE-INSTRUCTION-READ-CAREFULLY-You-are-NOT-buildi_1767993320203.txt  Pasted--Account-settings-Profile-picture-Avatar-for-Lourens-Wa_1768078753688.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-cd-C-Users-Lourens_1768060480982.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-cd-C-Users-Lourens_1768084410373.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-git-commit-m-Neuro_1768076723550.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-git-commit-m-Neuro_1768077106206.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-neurop-forge-test-_1768062232487.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-pip-install-twine-_1768077294533.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-ai-ag_1768089048641.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-ai-ag_1768089444742.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768130589924.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768132086232.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768132310910.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768132407856.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768132763495.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768132850699.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768133016729.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768136239175.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768148402216.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768154936889.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-demos-enter_1768213495840.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-m-pip-insta_1768089012844.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-python-m-pip-insta_1768133754553.txt  Pasted--C-Users-Lourens-Desktop-NeuropForge-type-C-Users-Loure_1768176018535.txt  Pasted--C-Users-Ruan-Desktop-NeuropForge-python-demos-red-team_1768228741143.txt  Pasted--Checking-out-commit-4829e5b5619d0d1ef0916e5deea570f5c8_1768387159493.txt  Pasted--Current-State-Neurop-Block-Forge-is-production-ready-4_1768048741245.txt  Pasted--Downloading-cache-Cloning-from-https-github-com-Louw11_1768260038808.txt  Pasted--Downloading-cache-Cloning-from-https-github-com-Louw11_1768260582315.txt  (+81 more)
sdk/: README.md  pyproject.toml
sdk/neuropforge/: __init__.py  cli.py  client.py
(+258 files in other folders)
