[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurop-forge"
version = "1.0.0"
description = "Production-grade semantic block composition engine with 2,060+ verified deterministic blocks"
readme = "README.md"
license = {text = "Dual License: Apache-2.0 / Commercial"}
requires-python = ">=3.9"
authors = [
    {name = "Neurop Forge Team"}
]
keywords = [
    "semantic-composition",
    "block-programming",
    "deterministic-execution",
    "code-blocks",
    "function-composition"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/neurop-forge/neurop-forge"
Documentation = "https://github.com/neurop-forge/neurop-forge#readme"
Repository = "https://github.com/neurop-forge/neurop-forge"

[project.scripts]
neurop-forge = "neurop_forge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurop_forge", "neurop_forge.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"neurop_forge" = ["**/*.json"]
"*" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
