[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurop-forge"
version = "2.0.0"
description = "AI-Native Execution Control Layer — 2,700+ verified operations that AI can search, compose, and execute but never modify"
readme = "README.md"
license = {text = "Dual License: Non-Commercial with Attribution / Commercial License"}
requires-python = ">=3.9"
authors = [
    {name = "Lourens Wasserman", email = "wassermanlourens@gmail.com"}
]
keywords = [
    "ai-execution-control",
    "ai-governance",
    "auditable-ai",
    "verified-operations",
    "compliance",
    "enterprise-ai"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
Repository = "https://github.com/Louw115/neurop-forge"

[project.scripts]
neurop-forge = "neurop_forge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurop_forge", "neurop_forge.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"neurop_forge" = ["**/*.json"]
"*" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
