[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuropforge"
version = "1.0.0"
description = "Neurop Forge SDK - Execute pre-verified, hash-locked function blocks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lourens Wasserman", email = "wassermanlourens@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "agents", "execution", "deterministic", "audit", "compliance"]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
]

[project.scripts]
nf = "neuropforge.cli:main"

[project.urls]
Homepage = "https://neurop-forge.onrender.com"
Documentation = "https://github.com/neuropforge/sdk"
Repository = "https://github.com/neuropforge/sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuropforge*"]
